err/jobtree.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jobTree'...
Listing './lib/python3.5/site-packages/jobTree/batchSystems'...
Listing './lib/python3.5/site-packages/jobTree/batchSystems/mesos'...
Listing './lib/python3.5/site-packages/jobTree/jobStores'...
Listing './lib/python3.5/site-packages/jobTree/lib'...
Compiling './lib/python3.5/site-packages/jobTree/lib/bioio.py'...
***   File "./lib/python3.5/site-packages/jobTree/lib/bioio.py", line 375
    os.chmod(dirName, 0777)
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/jobTree/utils'...
Compiling './lib/python3.5/site-packages/jobTree/utils/jobTreeStats.py'...
***   File "./lib/python3.5/site-packages/jobTree/utils/jobTreeStats.py", line 91
    print '%s %s %d' % (c, f, self.getWidth(c, f))
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jobTree/utils/jobTreeStatus.py'...
***   File "./lib/python3.5/site-packages/jobTree/utils/jobTreeStatus.py", line 91
    print "There are %i active jobs, %i parent jobs with children, \
    %i totally failed jobs and %i empty jobs (i.e. finished but not cleaned up) \
    currently in job tree: %s" % \
                                                                    
                                                                                 
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jobTree/worker.py'...
***   File "./lib/python3.5/site-packages/jobTree/worker.py", line 179
    print "---JOBTREE WORKER OUTPUT LOG---"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jobTree-3.0.3.dev1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
